--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.heading1 {
+	background: #00ff9d;
+	color: #fff;
+	padding: 1.5rem;
 }
